fix z-index

--- a/css/skin.css
+++ b/css/skin.css
@@ -1,3 +1,5 @@
+/*TODO: handle orientation: landscape for all components */
+
 /*
 TABLET RULE
 @media (max-width: 768px) {}
@@ -18,7 +20,7 @@ pulse-play-button START
   left: 0;
   right: 0;
   bottom: 0;
-  z-index:1000;
+  z-index: 500;
   cursor: pointer;
   opacity: 0.65;
   transition: opacity 300ms ease-out;
@@ -73,7 +75,7 @@ pulse-pause-button START
   left: 0;
   right: 0;
   bottom: 0;
-  z-index:1000;
+  z-index: 500;
   cursor: pointer;
   opacity: 0;
   transition: opacity 300ms ease-out;
@@ -152,7 +154,7 @@ pulse-pause-button END
     left: 0;
     right: 0;
     bottom: 0;
-    /*z-index:10000;*/
+    /*z-index: 500;*/
     background-color: black;
 }
 
@@ -237,7 +239,7 @@ pulse-pause-button END
 }
 
 .pulse-skin-button-container {
-    z-index: 10000;
+    z-index: 500;
     display: inline-block;
     position: absolute;
     width: 2%;
@@ -247,7 +249,7 @@ pulse-pause-button END
 }
 
 .pulse-skin-button-container-top {
-    z-index: 10000;
+    z-index: 500;
     display: inline-block;
     position: absolute;
     width: 3%;
@@ -365,7 +367,7 @@ pulse-progress-bar END
 .vjs-user-active .pulse-hover-overlay {
     background-color: rgba(0,0,0,0.1);
     cursor: pointer;
-    z-index: 999;
+    z-index: 450;
 }
 
 /*
@@ -376,7 +378,7 @@ pulse-video-start-countdown START
     position: absolute;
     right: 0;
     top: 10px;
-    z-index: 10000;
+    z-index: 500;
     background-color: rgba(0, 0, 0, 0.5);
     padding: 6px 18px 6px 12px;
     line-height: 19px;
@@ -570,16 +572,16 @@ pulse-control-container__child END
   left: 0;
   right: 0;
   background-image: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.0));
-  z-index: 999 !important;
+  z-index: 450 !important;
 }
 
 .pulse-visible {
-    z-index: 10000;
+    z-index: 500;
     display: block! important;
 }
 
 .pulse-hidden {
-    z-index: 10000;
+    z-index: 500;
     display: none;
 }
 
